import java.awt.*;
import java.awt.event.*;
import javax.swing.*;
import javax.swing.event.*;


public class Parkhaus extends JApplet {
  // Anfang Attribute
  // Ende Attribute
  
  public void init() {
    Container cp = getContentPane();
    cp.setLayout(null);
    cp.setBounds(0, 0, 300, 300);
    // Anfang Komponenten
    
    // Ende Komponenten
    
  } // end of init

  // Anfang Methoden
  // Ende Methoden
  
} // end of class Parkhaus
